# movdata

./: pyproject.toml
dags/: movies-dynamic-json.py  movies_dynamic_json.py
src/movdata/: .cli.py.swp  get_data.py  ml.py  movie_info.py  movie_list.py
tests/: test_ml.py
